--- a/owner.html
+++ b/owner.html
@@ -2,76 +2,62 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel de Administración - CristianShop</title>
+  <title>Panel de Administración - Cristian Shop</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
-<body class="owner-body">
+<body onload="cargarOwnerPanel()">
+
   <header class="header">
-    <h1 class="neon-header">👑 Panel de Administración - <span>CristianShop</span></h1>
-    <button class="logout-btn" onclick="goBack()">⬅ Volver al Panel</button>
+    <h1 class="neon-text-azul">⚙️ Panel de Administración</h1>
+    <p class="subtitulo">Solo para usuarios con rango Owner</p>
+    <button onclick="logout()" class="logout-btn">Cerrar Sesión</button>
   </header>
 
-  <main class="main-panel">
+  <main class="admin-container">
 
     <section class="admin-section">
-      <h2>👥 Gestionar Usuarios</h2>
+      <h2 class="neon-text-dorado">Usuarios Registrados</h2>
+      <div id="usersList" class="users-grid"></div>
+    </section>
 
+    <section class="admin-section">
+      <h2 class="neon-text-rosa">Gestión de Usuarios</h2>
       <div class="admin-box">
-        <h3>➕ Crear Usuario</h3>
-        <input type="text" id="newUser" placeholder="Usuario">
-        <input type="password" id="newPass" placeholder="Contraseña">
-        <input type="number" id="newBalance" placeholder="Saldo inicial">
-        <button onclick="createUser()">Crear</button>
+        <h3>➕ Crear Nueva Cuenta</h3>
+        <input type="text" id="nuevoUsuario" placeholder="Usuario">
+        <input type="password" id="nuevoPassword" placeholder="Contraseña">
+        <input type="number" id="nuevoSaldo" placeholder="Saldo inicial">
+        <select id="nuevoRol">
+          <option value="user">Usuario</option>
+          <option value="admin">Admin</option>
+        </select>
+        <button onclick="crearUsuario()">Crear Usuario</button>
       </div>
 
       <div class="admin-box">
         <h3>💰 Añadir / Quitar Saldo</h3>
-        <select id="userSelect"></select>
-        <input type="number" id="amount" placeholder="Monto">
-        <button onclick="addBalance()">Añadir</button>
-        <button onclick="removeBalance()">Quitar</button>
-      </div>
-
-      <div class="admin-box">
-        <h3>⚙️ Roles</h3>
-        <select id="roleUserSelect"></select>
-        <button onclick="makeAdmin()">Poner Admin</button>
-        <button onclick="removeAdmin()">Quitar Admin</button>
-      </div>
-
-      <div class="admin-box">
-        <h3>❌ Eliminar Usuario</h3>
-        <select id="deleteUserSelect"></select>
-        <button onclick="deleteUser()">Borrar</button>
+        <input type="text" id="usuarioSaldo" placeholder="Usuario">
+        <input type="number" id="cantidadSaldo" placeholder="Cantidad">
+        <button onclick="añadirSaldo()">Añadir</button>
+        <button onclick="quitarSaldo()">Quitar</button>
       </div>
     </section>
 
     <section class="admin-section">
-      <h2>🛒 Gestión de Productos</h2>
-
-      <div class="admin-box">
-        <h3>➕ Crear Producto</h3>
-        <input type="text" id="productName" placeholder="Nombre del producto">
-        <input type="number" id="productPrice" placeholder="Precio">
-        <input type="text" id="productDuration" placeholder="Duración (días)">
-        <input type="number" id="productStock" placeholder="Stock">
-        <input type="text" id="productImage" placeholder="URL de la imagen">
-        <button onclick="createProduct()">Crear Producto</button>
-      </div>
-
-      <div class="admin-box">
-        <h3>📦 Productos Existentes</h3>
-        <div id="productsList"></div>
+      <h2 class="neon-text-azul">📊 Estadísticas Generales</h2>
+      <div id="estadisticas" class="estadisticas-box">
+        <p><strong>Usuarios totales:</strong> <span id="totalUsuarios">0</span></p>
+        <p><strong>Saldo total acumulado:</strong> $<span id="totalSaldo">0</span></p>
+        <p><strong>Productos en stock:</strong> <span id="totalProductos">0</span></p>
       </div>
     </section>
 
   </main>
 
-  <footer class="footer">
-    <p>© 2025 CristianShop - Panel de administración</p>
+  <footer>
+    <p class="neon-text-rosa">© 2025 Cristian Store | Panel de administración profesional</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
