--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CristianShop - Iniciar sesión</title>
+  <title>CristianShop - Iniciar Sesión</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body class="login-body">
   <div class="login-container">
-    <h1 class="neon-title">✨ Bienvenido a <span>CristianShop</span> ✨</h1>
-    <div class="login-box">
-      <h2>Iniciar Sesión</h2>
-      <input type="text" id="username" placeholder="Usuario">
-      <input type="password" id="password" placeholder="Contraseña">
-      <button onclick="login()">Entrar</button>
-      <p id="loginMessage" class="message"></p>
-    </div>
-  </div>
+    <h1 class="neon-text-azul">💎 CristianShop</h1>
+    <p class="neon-text-rosa">Inicia sesión para continuar</p>
 
-  <script src="script.js"></script>
+    <div class="login-box">
+      <input type="text" id="username" placeholder="Usuario" autocomplete="off">
+      <input type="password" id="password" placeholder="Contraseña" autocomplete="off">
+      <button onclick="login()" class="login-btn">Entrar</button>
+    </div>
+
+    <p class="neon-text-dorado">© 2025 CristianShop | Panel de gestión digital</p>
+  </div>
 </body>
 </html>
