--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CristianShop - Iniciar Sesión</title>
+  <title>CristianShop - Login</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
 </head>
-<body class="login-body">
+<body>
   <div class="login-container">
     <h1 class="neon-text-azul">💎 CristianShop</h1>
     <p class="neon-text-rosa">Inicia sesión para continuar</p>
@@ -15,10 +14,12 @@
     <div class="login-box">
       <input type="text" id="username" placeholder="Usuario" autocomplete="off">
       <input type="password" id="password" placeholder="Contraseña" autocomplete="off">
-      <button onclick="login()" class="login-btn">Entrar</button>
+      <button id="loginBtn" class="login-btn">Entrar</button>
     </div>
 
-    <p class="neon-text-dorado">© 2025 CristianShop | Panel de gestión digital</p>
+    <p class="neon-text-dorado">© 2025 CristianShop | Panel de gestión</p>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
